--- a/src/app/Secretaire/edit-patient/edit-patient.component.html
+++ b/src/app/Secretaire/edit-patient/edit-patient.component.html
@@ -37,16 +37,8 @@
                                     <ul class="nav navbar-right panel_toolbox">
                                         <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
                                         </li>
-                                        <li class="dropdown">
-                                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-                                                aria-haspopup="true" aria-expanded="false"><i
-                                                    class="fa fa-wrench"></i></a>
-                                            <ul class="dropdown-menu" role="menu">
-                                                <li><a class="dropdown-item" href="#">Settings 1</a>
-                                                </li>
-                                                <li><a class="dropdown-item" href="#">Settings 2</a>
-                                                </li>
-                                            </ul>
+                                        <li><a (click)="detailPatient(id)" title="detail">
+                                                <i class="fa fa-folder"></i></a>
                                         </li>
                                         <li><a class="close-link"><i class="fa fa-close"></i></a>
                                         </li>
@@ -60,12 +52,18 @@
                                             <ul id="myTab" class="nav nav-tabs bar_tabs" role="tablist">
                                                 <li role="presentation" class="active"><a href="#tab_content1"
                                                         id="home-tab" role="tab" data-toggle="tab"
-                                                        aria-expanded="true">Détaille</a>
+                                                        aria-expanded="true">Modifier</a>
                                                 </li>
 
                                                 <li role="presentation" class=""><a href="#tab_content3" role="tab"
-                                                        id="profile-tab2" data-toggle="tab" aria-expanded="false">
-                                                        Historique d'hospitalisation</a>
+                                                        id="profile-tab2" data-toggle="tab" aria-expanded="false"
+                                                        *ngIf="!patient?.etat">
+                                                        Affecter</a>
+                                                </li>
+                                                <li role="presentation" class=""><a href="#tab_content2" role="tab"
+                                                        id="profile-tab" data-toggle="tab" aria-expanded="false"
+                                                        *ngIf="patient?.etat">
+                                                        Transférer</a>
                                                 </li>
                                             </ul>
                                             <div id="myTabContent" class="tab-content">
@@ -212,69 +210,87 @@
                                                     aria-labelledby="profile-tab">
                                                     <br>
 
+                                                    <div class="row">
+                                                        <div class="col-md-7 " id="decaleAffecteBox">
+                                                            <div class="x_panel bg-light">
+                                                                <div class="x_title">
+                                                                    <h2>Affecter le patient à un service </h2>
 
-                                                    <!--div *ngIf="servicesHosp?.totalElements>0; else showHistorique">
-                                                        <table class="table table-hover col-md-11" id="decaler">
-                                                            <thead>
-                                                                <tr>
-                                                                    <th scope="col">#</th>
-                                                                    <th scope="col">Service</th>
-                                                                    <th scope="col">Medecin traitant</th>
-                                                                    <th scope="col">chambre</th>
-                                                                    <th scope="col">Date entre</th>
-                                                                    <th scope="col">Date sortie</th>
-                                                                </tr>
-                                                            </thead>
-                                                            <tbody>
-                                                                <ng-container
-                                                                    *ngFor="let item of  servicesHosp?.content;">
-                                                                    <tr>
-                                                                        <th scope="row">#</th>
-                                                                        <td>{{item.service.nom}}</td>
-                                                                        <td>{{item.medecin_traitant.nom}}&nbsp;{{item.medecin_traitant.prenom}}
-                                                                        </td>
-                                                                        <td>{{item.num_chambre}}</td>
+                                                                    <div class="clearfix"></div>
+                                                                </div>
+                                                                <div class="x_content">
+                                                                    <br />
+                                                                    <form id="demo-form2" data-parsley-validate
+                                                                        class="form-horizontal form-label-left"
+                                                                        novalidate [formGroup]="affectForm"
+                                                                        (ngSubmit)="affect()">
 
-                                                                        <td>
-                                                                            {{item.date_entre| date:'shortDate'}}</td>
-                                                                        <td>
-                                                                            {{item.date_sortie| date:'shortDate'}}</td>
-                                                                    </tr>
-                                                                </ng-container>
+                                                                        <div class="form-group">
+                                                                            <label for="inputState">Chef du
+                                                                                service</label>
+                                                                            <select id="serviceAff" class="form-control"
+                                                                                formControlName="serviceAff"
+                                                                                placeholder="chef pour le service"
+                                                                                required>
+                                                                                <option disabled>chef service</option>
+                                                                                <option *ngFor="let u of servicesOcc"
+                                                                                    [ngValue]="u.service"
+                                                                                    (click)="doctorsOfSelectedService(u.service.id)">
+                                                                                    {{u.service.nom}}
+                                                                                </option>
 
-                                                            </tbody>
-                                                        </table><br>
-                                                        <nav aria-label="Page navigation example" id="decalNav">
-                                                            <ul class="pagination justify-content-end">
+                                                                            </select>
 
-                                                                <li class="page-item"
-                                                                    *ngFor="let p of pages; let i=index"
-                                                                    [ngClass]="{'active':i==curentPage}">
-                                                                    <a class="page-link clickable"
-                                                                        (click)="gotoPage(i)">{{i}}</a></li>
-                                                            </ul>
-                                                        </nav>
-                                                        <br><br><br><br><br>
-                                                    </div>
-                                                    <ng-template #showHistorique>
-                                                        <blockquote class="message" id="decaler">
-                                                            <p>
-                                                                &nbsp;
-                                                                Le patient {{patient?.nom}}&nbsp;{{patient?.prenom}} n'a
-                                                                pas encore un
-                                                                historique.</p>
+                                                                        </div>
 
-                                                        </blockquote>
+                                                                        <!---->
+                                                                        <div class="form-group">
+                                                                            <label for="inputState">Medecin
+                                                                                traitant</label>
+                                                                            <select id="doctorAff" class="form-control"
+                                                                                formControlName="doctorAff"
+                                                                                placeholder="choisir un medecin"
+                                                                                required>
+                                                                                <option disabled>Choisir un medecin
+                                                                                </option>
+                                                                                <option *ngFor="let d of doctors"
+                                                                                    [ngValue]="d.user">
+                                                                                    {{d.user.nom}} {{d.user.prenom}}
+                                                                                </option>
 
-                                                        <div class="row">
-                                                            <div id="box">
+                                                                            </select>
+                                                                        </div>
 
+                                                                        <div class="form-group ">
+                                                                            <label for="inputNom4">N° Chambre</label>
+                                                                            <input type="number" id="chambre"
+                                                                                formControlName="chambre"
+                                                                                class="form-control" required>
+
+                                                                        </div>
+                                                                        <div class="ln_solid"></div>
+                                                                        <div class="form-group row">
+                                                                            <div class="col-md-9 col-sm-9  offset-md-3">
+                                                                                <button type="button"
+                                                                                    class="btn btn-primary">Annulé</button>
+
+                                                                                <button type="submit"
+                                                                                    [disabled]="affectForm.invalid"
+                                                                                    class="btn btn-success">Valider</button>
+                                                                            </div>
+                                                                        </div>
+
+                                                                    </form>
+                                                                </div>
                                                             </div>
                                                         </div>
 
-                                                    </ng-template-->
-
+                                                    </div>
                                                 </div>
+                                                <div role="tabpanel" class="tab-pane fade" id="tab_content2"
+                                                    aria-labelledby="profile-tab">
+                                                </div>
+
                                             </div>
                                         </div>
                                     </div>
