--- a/src/app/Secretaire/detail-patient/detail-patient.component.html
+++ b/src/app/Secretaire/detail-patient/detail-patient.component.html
@@ -219,6 +219,7 @@
                                                                     <th scope="col">chambre</th>
                                                                     <th scope="col">Date entre</th>
                                                                     <th scope="col">Date sortie</th>
+                                                                    <th scope="col">Prescriptions</th>
                                                                 </tr>
                                                             </thead>
                                                             <tbody>
@@ -235,6 +236,13 @@
                                                                             {{item.date_entre| date:'shortDate'}}</td>
                                                                         <td>
                                                                             {{item.date_sortie| date:'shortDate'}}</td>
+                                                                        <td>
+                                                                            <a class="btn btn-primary btn-xs"
+                                                                                title="prescription"
+                                                                                (click)="historiquePrecription(item.id)"><i
+                                                                                    class="fa fa-folder-open-o"></i>
+                                                                            </a>
+                                                                        </td>
                                                                     </tr>
                                                                 </ng-container>
 
