--- a/src/app/Secretaire/detail-patient/detail-patient.component.html
+++ b/src/app/Secretaire/detail-patient/detail-patient.component.html
@@ -225,7 +225,7 @@
                                                     <br>
 
 
-                                                    <div *ngIf="servicesHosp?.totalElements>0; else showHistorique">
+                                                    <!--div *ngIf="servicesHosp?.totalElements>0; else showHistorique">
                                                         <table class="table table-hover col-md-11" id="decaler">
                                                             <thead>
                                                                 <tr>
@@ -275,7 +275,77 @@
                                                             </ul>
                                                         </nav>
                                                         <br><br><br><br><br>
+                                                    </div-->
+                                                    <div *ngIf="servicesHosp?.totalElements>0; else showHistorique">
+                                                        <!--modif-->
+                                                        <ng-container *ngFor="let item of  servicesHosp?.content;">
+                                                            <div class="col-md-4 col-sm-4  profile_details"
+                                                                id="decaler">
+                                                                <div class="well profile_view">
+                                                                    <div class="col-sm-12">
+                                                                        <h4 class="brief"><i>{{item.service.nom}}</i>
+                                                                        </h4>
+                                                                        <div class="left col-md-7 col-sm-7">
+                                                                            <h2>Dr:&nbsp;{{item.medecin_traitant.nom}}&nbsp;{{item.medecin_traitant.prenom}}
+                                                                            </h2><br>
+
+                                                                            <ul class="list-unstyled">
+                                                                                <li>N°chambre: {{item.num_chambre}}</li>
+
+                                                                                <li>Hospitaliser le:
+                                                                                    {{item.date_entre| date:'shortDate'}}
+                                                                                </li>
+                                                                                <li>Sortir le:
+                                                                                    {{item.date_sortie| date:'shortDate'}}
+                                                                                </li>
+
+
+                                                                            </ul>
+                                                                        </div><br><br><br>
+                                                                        <div
+                                                                            class="right col-md-5 col-sm-5 text-center">
+                                                                            <img [src]="this.userService.url+'/photoUser/'+item.medecin_traitant.id"
+                                                                                alt="Avatar"
+                                                                                class="img-circle img-fluid"
+                                                                                style="width: 250px;height: 100px">
+                                                                        </div>
+                                                                    </div>
+                                                                    <div class=" profile-bottom text-center">
+
+                                                                        <div class=" col-sm-6 emphasis">
+
+                                                                            <button type="button"
+                                                                                class="btn btn-primary btn-sm"
+                                                                                style="margin-left: 120px;"
+                                                                                title="prescription"
+                                                                                (click)="historiquePrecription(item.id)"><i
+                                                                                    class="fa fa-folder-open-o"></i>
+                                                                                prescriptions
+                                                                            </button>
+                                                                        </div>
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+
+                                                        </ng-container>
+                                                        <br><br><br><br><br><br><br>
+                                                        <nav aria-label="Page navigation example" id="decalNav">
+                                                            <ul class="pagination justify-content-end">
+
+                                                                <li class="page-item"
+                                                                    *ngFor="let p of pages; let i=index"
+                                                                    [ngClass]="{'active':i==curentPage}">
+                                                                    <a class="page-link clickable"
+                                                                        (click)="gotoPage(i)">{{i}}</a></li>
+                                                            </ul>
+                                                        </nav>
+                                                        <br><br><br><br><br>
+
+
+                                                        <!--/modif-->
                                                     </div>
+
+
                                                     <ng-template #showHistorique>
                                                         <blockquote class="message" id="decaler">
                                                             <p>
