add design prescription

--- a/src/app/Secretaire/detail-patient/detail-patient.component.html
+++ b/src/app/Secretaire/detail-patient/detail-patient.component.html
@@ -183,7 +183,8 @@
                                                                             <span>
                                                                                 <a class="btn btn-primary btn-xs"
                                                                                     title="prescription"
-                                                                                    (click)="currentResidentPrescription(currentResidentS?.id)"><i
+                                                                                    (click)="currentResidentPrescription(currentResidentS?.id)"
+                                                                                    style="color: white;"><i
                                                                                         class="fa fa-folder-open-o"></i>
                                                                                 </a>
                                                                             </span>
