--- a/src/app/Secretaire/edit-patient/edit-patient.component.html
+++ b/src/app/Secretaire/edit-patient/edit-patient.component.html
@@ -13,18 +13,20 @@
                         <div class="title_left">
                             <h3>Ajouter un patient</h3>
                         </div>
-
-                        <div class="title_right">
-                            <div class="col-md-5 col-sm-5  form-group pull-right top_search">
-                                <div class="input-group">
-                                    <div class="col-sm-12 col-12 text-right m-b-20">
-                                        <a href="addPrescription.html"
-                                            class="btn btn-primary float-right btn-rounded"><i class="fa fa-plus"></i>
-                                            Add Prescription</a>
+                        <!--ownerAccount.role=='secretaire' &&-->
+                        <ng-container *ngIf="patient?.etat">
+                            <div class="title_right">
+                                <div class="col-md-5 col-sm-5  form-group pull-right top_search">
+                                    <div class="input-group">
+                                        <div class="col-sm-12 col-12 text-right m-b-20">
+                                            <a class="btn btn-primary float-right btn-rounded" style="color: white;"
+                                                (click)="addPrescription(patient.id)"><i class="fa fa-plus"></i>
+                                                Prescription</a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </ng-container>
                     </div>
                     <div class="clearfix"></div>
                     <div class="row">
